# src/dtos/education_dto.go
@@ -1,0 +1,7 @@
+package dtos
+
+type Education struct {
+	Institution string `json:"institution"`
+	Course      string `json:"course"`
+	Level       string `json:"level"`
+}
